Fixed crate loot data gen and crate stored item drop count